<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#333333">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/title_legBet"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:id="@+id/popupTitle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reject"
                    android:text="X"
                    android:background="#ff175a26"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:clickable="true"
                    android:layout_margin="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="800dp"
            android:layout_height="350dp"
            android:layout_marginTop="55dp"
            android:background="#70d35400"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card"
                    android:src="@drawable/legbettingtile_blue_2"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/hello_world"/>

            </LinearLayout>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/accept"
                android:text="@string/accept"
                android:background="#ff175a26"
                android:minHeight="50dp"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:clickable="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>