<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#333333">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_raceBet_olle"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="24sp"
                android:id="@+id/popupTitle"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            android:background="#70d35400"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="35dp"
                android:layout_centerHorizontal="true">

                <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/card_blue"
                    android:layout_margin="2dp"
                    android:src="@drawable/c1_racebettingcard_blue"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitCenter"/>
                <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/card_green"
                    android:layout_margin="2dp"
                    android:src="@drawable/c1_racebettingcard_green"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitCenter"/>
                <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/card_yellow"
                    android:layout_margin="2dp"
                    android:src="@drawable/c1_racebettingcard_orange"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitCenter"/>
                <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/card_orange"
                    android:layout_margin="2dp"
                    android:src="@drawable/c1_racebettingcard_yellow"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitCenter"/>
                <ImageButton
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/card_white"
                    android:layout_margin="2dp"
                    android:src="@drawable/c1_racebettingcard_white"
                    android:contentDescription="@string/hello_world"
                    android:scaleType="fitCenter"/>

            </LinearLayout>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/reject"
                android:text="@string/reject"
                android:background="#ff175a26"
                android:minHeight="50dp"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:clickable="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/accept"
                android:text="@string/accept"
                android:background="#ff175a26"
                android:minHeight="50dp"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:clickable="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>